--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,18 +1,9 @@
-<h1>sign up</h1>
+<h1>Signup!</h1>
 
+<%= form_for :user, url: '/users' do |f| %>
 
-<%= form_with scope: :article, url: articles_path, local: true do |form| %>
-  <p>
-    <%= form.label :email %><br>
-    <%= form.text_field :email %>
-  </p>
- 
-  <p>
-    <%= form.label :password %><br>
-    <%= form.text_area :password %>
-  </p>
- 
-  <p>
-    <%= form.submit %>
-  </p>
+  Email: <%= f.text_field :email %>
+  Password: <%= f.password_field :password %>
+  <%= f.submit "Submit" %>
+
 <% end %>
