done with capybara

--- a/app/views/matches/new.erb
+++ b/app/views/matches/new.erb
@@ -13,7 +13,7 @@
 
 					   <%= form.radio_button :category, "football", style: "margin-left: 0.7vw;" %>
 					   Football
-					   <%= form.radio_button :category, "vollyball", style: "margin-left: 0.7vw;" %>
+					   <%= form.radio_button :category, "volleball", style: "margin-left: 0.7vw;" %>
 					   Vollyball
 					   <%= form.radio_button :category, "tennis", style: "margin-left: 0.7vw;" %>
 					   Tennis
@@ -27,7 +27,7 @@
 
 					<div class="mt-3">
 						<h5><%= form.label :position_needed %>:</h5>
-						<%= form.text_field :position ,:required => true, placeholder: "write 'player' if position not important" %>
+						<%= form.text_field :position ,:required => true, placeholder: "'Any' if position not important" %>
 					</div>
 
 					<div class="mt-3">
