--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -4,7 +4,7 @@
 		<h2 style="margin-top: 2%; margin-bottom: 2%">
 			All Matches
 			<% if current_user != nil %>
-				<%= link_to 'Create new match', new_match_path, :class => "btn btn-info ml-2" %>
+				<%= link_to 'Create new match', new_match_path, :class => "btn btn-info"  %>
 			<% end %>
 		</h2>
 
