--- a/app/views/matches/new.erb
+++ b/app/views/matches/new.erb
@@ -26,8 +26,8 @@
 					</div>
 
 					<div class="mt-3">
-						<h5><%= form.label :position_needed %>:</h5>
-						<%= form.text_field :position ,:required => true, placeholder: "'Any' if position not important" %>
+						<h5><%= form.label :position %>:</h5>
+						<%= form.text_field :position ,:required => true %>
 					</div>
 
 					<div class="mt-3">
