--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -6,6 +6,7 @@
 		<input  id="city" value="dhahran">
 		<button id="getWeatherForcast"> Get Weather</button>
 		<div id="showtWeatherForcast"></div>
+		<%= link_to 'Create new match', new_match_path %>
 </div>
 <script type="text/javascript">
 	$(document).ready(function(){
