--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -15,7 +15,7 @@
 			var key = '88409c5d89e71a7e16bbbd677d36cc8d';
 
 			$.ajax({
-				url : 'http://api.openweathermap.org/data/2.5/weather',
+				url : 'https://api.openweathermap.org/data/2.5/weather',
 				dataType: 'json',
 				type: 'GET',
 				data: {q: city, appid: key, units: 'metric'},
