--- a/app/views/matches/new.erb
+++ b/app/views/matches/new.erb
@@ -27,7 +27,7 @@
 
 					<div class="mt-3">
 						<h5><%= form.label :position %>:</h5>
-						<%= form.text_field :position ,:required => true %>
+						<%= form.text_field :position ,:required => true, placeholder: "'Any' if it's not important" %>
 					</div>
 
 					<div class="mt-3">
