--- a/app/views/matches/_match.html.erb
+++ b/app/views/matches/_match.html.erb
@@ -3,7 +3,7 @@
 		<div class="card" style="background-color : #FFFFFF99;">
 			<div class="card-body">
 				<p><strong>Category: </strong><%= match.category %></p>
-				<p class="text-capitalize"><strong>position: </strong><%= match.position %></p>
+				<p class="text-capitalize"><strong>players needed: </strong><%= match.num_of_player %></p>
 				<p><strong>Date: </strong><%= match.date %></p>
 				<p><strong>Time: </strong><%= match.start_time %>
 				<p>
