--- a/app/views/matches/new.erb
+++ b/app/views/matches/new.erb
@@ -13,7 +13,7 @@
 
 					   <%= form.radio_button :category, "football", style: "margin-left: 0.7vw;" %>
 					   Football
-					   <%= form.radio_button :category, "volleball", style: "margin-left: 0.7vw;" %>
+					   <%= form.radio_button :category, "volleyball", style: "margin-left: 0.7vw;" %>
 					   Vollyball
 					   <%= form.radio_button :category, "tennis", style: "margin-left: 0.7vw;" %>
 					   Tennis
