--- a/app/views/matches/new.erb
+++ b/app/views/matches/new.erb
@@ -14,7 +14,7 @@
 					   <%= form.radio_button :category, "football", style: "margin-left: 0.7vw;" %>
 					   Football
 					   <%= form.radio_button :category, "volleyball", style: "margin-left: 0.7vw;" %>
-					   Vollyball
+					   Volleyball
 					   <%= form.radio_button :category, "tennis", style: "margin-left: 0.7vw;" %>
 					   Tennis
 					   <%= form.radio_button :category, "basketball", style: "margin-left: 0.7vw;" %>
