--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,12 +32,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <% if current_user %>
-        <li class="nav-item">
-          <%= link_to "#{current_user.email}", user_path(current_user.id), :class => "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= link_to "All Matches", matches_path, :class => "nav-link"%>
-        </li>
+          <li class="nav-item">
+            <%= link_to "#{current_user.email}", user_path(current_user.id), :class => "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to "All Matches", matches_path, :class => "nav-link"%>
+          </li>
+          <% if current_user.role == "admin" %>
+            <li class="nav-item">
+            <%= link_to "#{current_user.role}",'' , :class => "nav-link"%>
+            </li>
+          <% end %>
+
         <% end %>
       </ul>
       <ul class="navbar-nav mr-auto">
